--- a/src/Stylesheets/main.scss
+++ b/src/Stylesheets/main.scss
@@ -9,5 +9,8 @@
 @import "AppStyles/Button.scss";
 @import "AppStyles/Pagination.scss";
 @import "AppStyles/AllPosts.scss";
+@import "AppStyles/Input.scss";
+@import "AppStyles/AddNewPost.scss";
+@import "AppStyles/MyPosts.scss";
 @import "AppStyles/ErrorPage.scss";
 @import "AppStyles/Error.scss";
