--- a/src/Stylesheets/AppStyles/AllPosts.scss
+++ b/src/Stylesheets/AppStyles/AllPosts.scss
@@ -1,32 +1,49 @@
 .post-list {
   list-style: none;
-  padding: 0;
-  margin: 0;
+  width: 70%;
+  margin: 2rem auto;
 }
 
 .post-list li {
-  padding: 10px;
-  border: 1px solid #ddd;
-  margin-bottom: 10px;
-  border-radius: 5px;
+  padding: 1rem;
+  border: 0.1rem solid #ddd;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
   background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .post-title {
-  font-size: 20px;
-  margin: 0 0 5px;
-  color: #333;
+  font-size: 2rem;
+  margin: 0 0 0.5rem;
+  color: $primary-color;
 }
 
 .post-author {
   font-style: italic;
   font-size: 14px;
   margin: 0 0 5px;
-  color: #666;
+  color: $primary-light-color;
 }
 
 .post-body {
   font-size: 16px;
   line-height: 1.5;
   color: #333;
+}
+.post-button {
+  border: none;
+  border-radius: 3rem;
+  width: fit-content;
+  font-size: 1.4rem;
+  padding: 1rem 3rem;
+  background: linear-gradient(to bottom left, #44607c, #2c3e50);
+  color: #ffffff;
+  transition: all 0.3s;
+
+  &:hover {
+    background: linear-gradient(to top left, #44607c, #2c3e50);
+  }
 }
