--- a/src/Stylesheets/main.scss
+++ b/src/Stylesheets/main.scss
@@ -11,6 +11,7 @@
 @import "AppStyles/AllPosts.scss";
 @import "AppStyles/Input.scss";
 @import "AppStyles/AddNewPost.scss";
+@import "AppStyles/PostDetails.scss";
 @import "AppStyles/MyPosts.scss";
 @import "AppStyles/ErrorPage.scss";
 @import "AppStyles/Error.scss";
