--- a/src/Stylesheets/AppStyles/AddNewPost.scss
+++ b/src/Stylesheets/AppStyles/AddNewPost.scss
@@ -36,13 +36,22 @@
   &--iconbox {
     width: 50%;
     margin: 2rem auto;
+    @media only screen and (max-width: $bp--large) {
+      width: 70%;
+    }
+    @media only screen and (max-width: $bp--medium) {
+      width: 80%;
+    }
+    @media only screen and (max-width: $bp--small) {
+      width: 90%;
+    }
   }
 }
 
 @media only screen and (max-width: $bp--large) {
   .new__post {
     &--card {
-      width: 65%;
+      width: 70%;
     }
   }
 }
@@ -50,7 +59,7 @@
 @media only screen and (max-width: $bp--medium) {
   .new__post {
     &--card {
-      width: 75%;
+      width: 80%;
     }
   }
 }
@@ -58,7 +67,7 @@
 @media only screen and (max-width: $bp--small) {
   .new__post {
     &--card {
-      width: 80%;
+      width: 90%;
     }
   }
 }
