--- a/src/Stylesheets/AppStyles/AllPosts.scss
+++ b/src/Stylesheets/AppStyles/AllPosts.scss
@@ -2,6 +2,13 @@
   list-style: none;
   width: 70%;
   margin: 4rem auto 2rem;
+
+  @media only screen and (max-width: 1000px) {
+    width: 85%;
+  }
+  @media only screen and (max-width: 768px) {
+    width: 95%;
+  }
 }
 
 .post-list li {
@@ -13,6 +20,14 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  @media only screen and (max-width: 900px) {
+  }
+}
+.post__list--left {
+  flex-basis: 75%;
+  @media only screen and (max-width: 600px) {
+    flex-basis: 65%;
+  }
 }
 
 .post-title {
@@ -42,7 +57,9 @@
   background: linear-gradient(to bottom left, #44607c, #2c3e50);
   color: #ffffff;
   transition: all 0.3s;
-
+  @media only screen and (max-width: 600px) {
+    padding: 1rem 2rem;
+  }
   &:hover {
     background: linear-gradient(to top left, #44607c, #2c3e50);
   }
