--- a/src/Stylesheets/AppStyles/Footer.scss
+++ b/src/Stylesheets/AppStyles/Footer.scss
@@ -1,118 +1,141 @@
 .footer {
   background-color: $primary-color;
-  padding: 5rem 3rem;
-  text-align: center;
+  padding: 4rem 6rem;
+  margin-top: 6rem;
+  position: relative;
 
-  & div {
+  &__scroll {
+    height: 3rem;
+    width: 3rem;
+    fill: $secondary-dark-color;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    &--box {
+      position: absolute;
+      top: -12%;
+      left: 47%;
+      height: 7rem;
+      width: 7rem;
+      border-radius: 50%;
+      background-color: $primary-light-color;
+      cursor: pointer;
+
+      &:hover > .footer__scroll {
+        animation: slideUpDown 0.5s;
+      }
+    }
+  }
+
+  &__icons {
+    margin: 5.5rem auto 4rem;
+    width: 30%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 3.5rem;
+    &--box {
+      background-color: $primary-light-color;
+      position: relative;
+      width: 5rem;
+      height: 5rem;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: all 0.3s;
 
-    & .left,
-    & .right {
-      display: flex;
-      list-style: none;
-    }
-
-    & .left {
-      flex-basis: 40%;
-      justify-content: space-around;
-      & li {
-        & a:link,
-        & a:visited {
-          text-decoration: none;
-          font-size: 1.8rem;
-          color: $secondary-color;
-          padding: 0.8rem 1.3rem;
-          border: 0.1rem solid rgba($secondary-dark-color, 0.7);
-          border-radius: 1rem;
-          display: block;
-          box-shadow: $box-shadow;
-          transition: all 0.3s;
-        }
-
-        & a:hover {
-          color: $secondary-light-color;
-          background-color: $primary-light-color;
-          transform: skewY(3deg);
-        }
-        & a:active {
-          background-color: $primary-dark-color;
-          transform: skewY(1deg);
-        }
+      &:hover {
+        background-color: $primary-dark-color;
       }
-    }
-    @media only screen and (max-width: $bp--large) {
-      & .left {
-        flex-basis: 60%;
+      &:hover > .icon {
+        fill: $primary-light-color;
       }
-    }
-    @media only screen and (max-width: $bp--small) {
-      & .left {
-        flex-basis: 65%;
-      }
-    }
-    & .right {
-      flex-basis: 20%;
-      justify-content: space-evenly;
-    }
 
-    @media only screen and (max-width: $bp--small) {
-      & .right {
-        flex-basis: 30%;
+      & svg.icon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 3rem;
+        width: 3rem;
+        fill: $secondary-color;
+        transition: all 0.3s;
       }
     }
   }
-
-  & p {
-    width: 65%;
-    margin: 0 auto;
-    font-size: 2rem;
+  &__title {
+    clip-path: polygon(
+      0 0,
+      100% 0,
+      100% 80%,
+      65% 80%,
+      50% 100%,
+      45% 80%,
+      0 80%
+    );
+    background-color: $primary-dark-color;
     color: $secondary-dark-color;
+    box-shadow: 0 1rem 2rem $secondary-color;
+    padding: 1.2rem 2rem 2rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    position: absolute;
+    top: -50%;
+    left: 48%;
+    transform: translate(-50%, -50%);
   }
-  @media only screen and (max-width: $bp--large) {
-    & p {
-      width: 70%;
-    }
-  }
-  @media only screen and (max-width: $bp--small) {
-    & p {
-      width: 75%;
+
+  &__name {
+    text-align: center;
+    font-size: 1.5rem;
+    color: $secondary-light-color;
+    text-transform: uppercase;
+    &--span {
+      color: $primary-dark-color;
+      background-color: $secondary-dark-color;
+      padding: 0.2rem;
     }
   }
 }
-
-.icon {
-  height: 3rem;
-  width: 3rem;
-  fill-opacity: 0.6;
-  transition: all 0.3s;
-
-  &:hover {
-    transform: scale(1.2);
+@keyframes slideUpDown {
+  0% {
+    transform: translate(-50%, -50%);
+  }
+  25% {
+    transform: translate(-50%, 5%);
+    opacity: 0;
   }
 
-  &__git {
-    fill: #171515;
-
-    fill-opacity: 0.7;
-    &:hover {
-      fill-opacity: 1;
+  75% {
+    transform: translate(-50%, -110%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
+}
+@media only screen and (max-width: $bp--large) {
+  .footer {
+    &__icons {
+      width: 60%;
     }
   }
-  &__twit {
-    fill: #1da1f2;
-
-    &:hover {
-      fill-opacity: 1;
+}
+@media only screen and (max-width: $bp--smallest) {
+  .footer {
+    &__scroll {
+      height: 3rem;
+      width: 3rem;
+      &--box {
+        top: -9%;
+        left: 45%;
+        height: 6rem;
+        width: 6rem;
+      }
     }
-  }
-  &__lin {
-    fill: #0072b1;
 
-    &:hover {
-      fill-opacity: 1;
+    &__icons {
+      width: 70%;
     }
   }
 }
