--- a/src/Stylesheets/AppStyles/Pagination.scss
+++ b/src/Stylesheets/AppStyles/Pagination.scss
@@ -76,41 +76,49 @@
 @media only screen and (max-width: 900px) {
   .pagination {
     &__card {
-      width: 90%;
+      width: 80%;
     }
     &__icons--box {
-      flex-basis: 25%;
-    }
-    &__icons--prev,
-    &__icons--next {
-      font-size: 1.5rem;
+      flex-basis: 20%;
     }
 
     &__icons--paragraph {
-      font-size: 1.3rem;
-      font-weight: 400;
+      font-size: 1.8rem;
+      font-weight: 600;
     }
 
     &__buttons {
       flex-basis: 70%;
 
       & button {
-        text-align: center;
-        padding: 0.3rem 0.5rem;
-        margin: 0 0.3rem 0.3rem 0.3rem;
-        font-size: 1rem;
-        font-weight: 400;
+        padding: 0.8rem 1.5rem;
+        margin: 0 0.7rem;
+        font-size: 1.7rem;
+        font-weight: 600;
+      }
+    }
+  }
+}
 
-        border-radius: 0.3rem;
-        border: 0.1rem solid transparent;
+@media only screen and (max-width: 600px) {
+  .pagination {
+    &__card {
+      width: 90%;
+      flex-direction: column;
+    }
+    &__icons--box {
+      width: 40%;
+    }
+    &__buttons {
+      margin: 2rem auto 1rem;
+      width: 100%;
+      justify-content: center;
 
-        &:hover {
-          border: 0.1rem solid $primary-color;
-        }
-
-        &:focus {
-          border: 0.1rem solid $primary-color;
-        }
+      & button {
+        padding: 0.8rem 1.5rem;
+        margin: 0 0.7rem;
+        font-size: 1.7rem;
+        font-weight: 600;
       }
     }
   }
