--- a/src/Stylesheets/main.scss
+++ b/src/Stylesheets/main.scss
@@ -12,6 +12,8 @@
 @import "AppStyles/Input.scss";
 @import "AppStyles/AddNewPost.scss";
 @import "AppStyles/PostDetails.scss";
+@import "AppStyles/CommentBox.scss";
+@import "AppStyles/Comment.scss";
 @import "AppStyles/MyPosts.scss";
-@import "AppStyles/ErrorPage.scss";
+@import "AppStyles/404.scss";
 @import "AppStyles/Error.scss";
