--- a/src/pages/landingpage/Landing.module.css
+++ b/src/pages/landingpage/Landing.module.css
@@ -35,14 +35,16 @@
   color: #44607c;
   font-size: 1.8rem;
 }
+
 .btn__box {
   width: 100%;
 }
 
 .btn {
-  padding: 2rem 4rem;
+  height: 6.5rem;
+  width: 18rem;
   border-radius: 1rem;
-  font-size: 1.6rem;
+  font-size: 2rem;
   border: 0.2rem solid #44607c;
   transition: all 0.3s;
 }
@@ -60,7 +62,7 @@
   transition: all 0.3s;
 }
 .btn__primary:hover {
-  background: linear-gradient(to right bottom, #2c3e50b9, #141c24c7);
+  background: linear-gradient(to right bottom, #212e3c, #141c24c7);
 }
 
 .btn__secondary:hover {
@@ -101,48 +103,43 @@
   }
 }
 
-@media only screen and (max-width: 650px) {
-  .header {
-    height: unset;
-    padding: 0;
+@media only screen and (max-width: 1000px) {
+  .section {
+    padding: 4rem 8rem;
+    height: fit-content;
+  }
+  .landing {
+    margin-top: 4rem;
     flex-direction: column;
     text-align: center;
   }
 
   .left {
-    margin-top: 0;
-    padding: 2rem 4rem 0;
+    margin-top: 6rem;
     width: 100%;
-  }
-
-  .h1 {
-    color: #202020;
-    font-weight: 700;
-    font-size: 2.8rem;
-    line-height: 4rem;
   }
 
   .p {
-    margin: 0;
+    margin: 2rem 0 1.5rem;
+    font-size: 2.2rem;
+    color: #202020;
   }
   .btn__box {
-    margin-top: 0.3rem;
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+
   .btn {
-    padding: 0.7rem 1.2rem;
-    margin: 0.7rem auto;
-    font-size: 1.5rem;
+    height: 7rem;
+    width: 20rem;
+    margin: 1rem auto;
+    font-size: 2rem;
   }
 
   .right {
     width: 100%;
-    padding: 0 1rem 0;
-    margin-bottom: -3rem;
   }
 
   .img {
@@ -150,5 +147,11 @@
     height: 50vh;
     width: 100%;
     object-fit: contain;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .section {
+    padding: 4rem 2rem;
   }
 }
