--- a/src/pages/signup/SignUp.module.css
+++ b/src/pages/signup/SignUp.module.css
@@ -33,10 +33,16 @@
   color: #2d85dd;
 }
 
+@media only screen and (max-width: 900px) {
+  .login {
+    width: 70%;
+    margin-top: 8rem;
+  }
+}
+
 @media only screen and (max-width: 650px) {
   .login {
-    width: 100%;
-    box-shadow: none;
+    width: 90%;
     padding: 1rem;
     border-radius: 0;
   }
