--- a/src/Stylesheets/AppStyles/Pagination.scss
+++ b/src/Stylesheets/AppStyles/Pagination.scss
@@ -33,14 +33,13 @@
   &__buttons {
     flex-basis: 75%;
     display: flex;
-    align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
 
     & button {
       text-align: center;
       padding: 0.7rem 1.1rem;
-      margin: 0 0.3rem 0.3rem 0.3rem;
+      margin: 0.5rem;
       font-size: 1.4rem;
       font-weight: 500;
       background-color: $primary-dark-color;
@@ -92,7 +91,6 @@
 
       & button {
         padding: 0.8rem 1.5rem;
-        margin: 0 0.7rem;
         font-size: 1.7rem;
         font-weight: 600;
       }
