--- a/src/pages/signup/SignUpForm.module.css
+++ b/src/pages/signup/SignUpForm.module.css
@@ -39,17 +39,25 @@
   padding: 0.5rem 0;
   border-radius: 10rem;
 }
-.forget:link,
-.forget:visited {
-  display: block;
-  width: 100%;
-  margin-top: -1.5rem;
-  text-align: right;
-  font-size: 1.2rem;
-  color: #ad703d;
-}
 
-.forget:hover,
-.forget:active {
-  color: #b1580f;
+.span__box {
+  text-align: center;
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 1.4rem;
+  color: rgb(81, 106, 81);
+  letter-spacing: 0.1rem;
+}
+.success_button {
+  border: none;
+  margin-left: 1rem;
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #5d5a5a;
+  background-color: #9eb7ee;
+  padding: 1rem 1.4rem;
+  border-radius: 0.2rem;
+}
+.success_button:hover {
+  color: #2e3843;
 }
