--- a/src/components/LoadingSpinner/LoadingSpinner.module.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.module.css
@@ -3,10 +3,17 @@
   justify-content: center;
   align-items: center;
 }
+.spinner__boxfull {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50rem;
+  width: 100%;
+}
 .spinner {
-  height: 2.5rem;
-  width: 2.5rem;
-  fill: rgb(83, 81, 81);
+  height: 3rem;
+  width: 3rem;
+  fill: rgb(56, 51, 51);
   animation: spinner 2s linear infinite;
 }
 
